objects/QIDC__MDM_LookupType_ims__c.object
<CustomObject>
    <description>To store Lookup Types Records.</description>
    <fields>
        <fullName>QIDC__Country_Code_ims__c</fullName>
        <description>Country code of the code stored</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Country Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Data_Tenant_Code_ims__c</fullName>
        <description>Data Tenant code of the code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Data Tenant code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Data_Tenant_Label__c</fullName>
        <description>Data Tenant Label of the code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Data Tenant Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Label_ims__c</fullName>
        <description>To store Source Value of the Lookup Type.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>To store Source Value of the Lookup Type.</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Lookup_Code_ims__c</fullName>
        <description>To store Lookup Code</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>To store Lookup Code</inlineHelpText>
        <label>Lookup Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Lookup_ExternalKey_ims__c</fullName>
        <description>To store unique id as External Key</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>To store unique id as External Key</inlineHelpText>
        <label>Lookup External Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QIDC__Lookup_Type_Name_ims__c</fullName>
        <description>To store Lookup Type Name</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>To store Lookup Type Name</inlineHelpText>
        <label>Lookup Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Salesforce_Code_ims__c</fullName>
        <description>Salesforce Code for the code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Salesforce Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Salesforce_Label_ims__c</fullName>
        <description>Salesforce Label for the code selected</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Salesforce Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MDM LookupType</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDM LookupTypes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>